[package]
name = "reconnect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
murmur3 = "0.5.1"
anyhow = "1.0.56"
serde = "1.0.136"
serde_derive = "1.0.136"
csv = "1.1.6"
clap = { version = "3.1.9", features = ["derive"] }

[dev-dependencies]
itertools = "0.10.3"
fake = "2.4.3"
rand = "0.8.5"
#quickcheck = "1.0.3"
